tests/build/widget_new/incorrect_arg_type3.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
 --> $DIR/incorrect_arg_type3.rs:7:40
  |
7 |         background_gradient = 0.deg(), true
  |                                        ^^^^
  |                                        |
  |                                        expected an implementor of trait `IntoVar<GradientStops>`
  |                                        help: consider borrowing here: `&true`
  |
  = note: required by `background_gradient_ArgsImpl::<T_axis, T_stops>::new`
